[build-system]
requires = ["setuptools>=58.0"]
build-backend = "setuptools.build_meta"

[project]
name = "devops_trabalho"
version = "0.0.4"
authors = [
  { name="Carlos Werly", email="werlyrocha@gmail.com" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies ={file = ["requirements.txt"]}

[project.urls]
"Homepage" = "https://github.com/werlyrocha/devops"
"Bug Tracker" = "https://github.com/werlyrocha/devops/issues"